--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
               <img class="w-2/4" src="images/Summer 1.png" alt="">
               <div>
                   <p class="py-6 text-2xl font-medium">---SALE FEVER---</p>
-                <h1 class="text-5xl font-bold">Purchase TK 200 or above & get 20% off</h1>
+                <h1 class="text-5xl font-bold">Purchase TK 200 or above & get <span class="text-[#E527B2]">20% off</span></h1>
                <div class="flex mt-20 gap-4 ">
-                <p>Use Promo Code</p>
-                <button class="btn bg-[#E527B2]">SELL200</button>
+                <p class="mt-3">Use Promo Code</p>
+                <button class="btn text-white bg-[#E527B2]">SELL200</button>
 
                </div>
               </div>
@@ -46,8 +46,8 @@
                 <p >Have coupon?</p>
               
                <div>
-                <input id="coupon-field" type="text" placeholder="Coupon code">
-                <button id="Apply" class="btn bg-[#E527B2] ">Apply</button>
+                <input class="w-1/2" id="coupon-field" type="text" placeholder="Coupon code">
+                <button id="Apply" class="btn hover:bg-[#E527B2]  bg-[#E527B2] text-white">Apply</button>
                </div>
                <div id="selected-product"></div>
                <div class="cart-box">
@@ -56,8 +56,20 @@
                  <hr />
                  <h5>Total: <span id="allTotal">00</span></h5>
                </div>
-               <button id="make-purchase" class="btn bg-[#E527B2] ">Make Purchase</button>
+               <button onclick="my_modal_1.showModal()" id="make-purchase" class="btn bg-[#E527B2] hover:bg-[#E527B2] text-white">Make Purchase</button>
+              <!-- Open the modal using ID.showModal() method -->
               
+<dialog id="my_modal_1" class="modal">
+  <form method="dialog" class="modal-box">
+    <img class="mx-auto" src="images/congo.png" alt="">
+    <h3 class="font-bold text-4xl mx-auto">Congratulations</h3>
+    <p class="py-4">Your Purchase the product</p>
+    <div class="modal-action">
+      <!-- if there is a button in form, it will close the modal -->
+      <button class="btn text-white bg-[#E527B2] mx-auto">Go Home</button>
+    </div>
+  </form>
+</dialog>
              </div>
               <div>
                 <!-- card -->
@@ -186,10 +198,12 @@
             </div>
           </div>
     </main>
+    <script src="js/utilities.js"></script>
     <script src="js/removeReplica.js"></script>
     <script src="js/index.js"></script>
     <script src="js/btnDis.js"></script>
     <script src="js/coupon.js"></script>
     <script src="js/makePurchase.js"></script>
+    <script src="js/goHome.js"></script>
 </body>
 </html>
