--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <p class="py-4">Your Purchase the product</p>
     <div class="modal-action">
       <!-- if there is a button in form, it will close the modal -->
-      <button class="btn text-white bg-[#E527B2] mx-auto">Go Home</button>
+      <button id="go-home" class="btn text-white bg-[#E527B2] mx-auto">Go Home</button>
     </div>
   </form>
 </dialog>
