--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" checked />
                             <input type="radio" name="rating-2" class="mask mask-star-2 bg-orange-400" />
                           </div>
-                      <h2  class="card-title  text-lg font-semibold">K. Accessories</h2>
+                      <h2  class="card-title  text-lg font-semibold">Kitchen Accessories</h2>
                       <p  class="text-lg font-normal"><span id="price">25.00</span> TK</p>
                       
                     </div>
@@ -198,9 +198,8 @@
             </div>
           </div>
     </main>
-    <script src="js/utilities.js"></script>
-    <script src="js/removeReplica.js"></script>
     <script src="js/index.js"></script>
+    <script src="js/removeReplica.js"></script>
     <script src="js/btnDis.js"></script>
     <script src="js/coupon.js"></script>
     <script src="js/makePurchase.js"></script>
